test/libsolidity/syntaxTests/storageLayoutSpecifier/hex_string_cast.sol
contract C layout at uint40(bytes5(hex"0011223344")) { }
// ----
// TypeError 1505: (21-52): The base slot expression contains elements that are not yet supported by the internal constant evaluator and therefore cannot be evaluated at compilation time.
